# emr_data_pipeline

./: .gitignore  project_file_tree.txt  pyproject.toml  readme.md  setup.md  setup.py
.devcontainer/: devcontainer.json  postStartCommand.sh  requirements.txt
airflow/: .env.example  Dockerfile  Makefile  docker-compose.yaml
airflow/dags/: dbt_dag_test.py  dbt_task_group_test.py  dummy_containerized_test_dag.py  emr_analytics_pipeline.py  ingestion_containerized_test_dag.py  ingestion_test_dag.py  patients.csv
airflow/dags/dbt/: .user.yml  create_mock_table.sql  profiles.yml
airflow/dags/dbt/emr_analytics/: dbt_project.yml  package-lock.yml  packages.yml  run_local.sh
airflow/dags/dbt/emr_analytics/analyses/: calculate_past_encoutner.sql  check_encounter_medication.sql  check_fact_patient_readmissions.sql  check_int_encounters.sql  check_orgs.sql  encounter_dates.sql  encouters_by_month.sql  raw_patients.sql  stg_customers_review.sql  stg_medications.sql  top_medications.sql
airflow/requirements/: base.txt
dbt/: profiles.yml
dbt/emr_analytics/: dbt_project.yml
scripts/: docker-build.sh
scripts/emr_ddl/: raw_patients.sql
scripts/emr_ingestion/: Dockerfile  __init__.py  emr_ingestion.py  run_local.sh
scripts/emr_ingestor/: Dockerfile  emr_ingestor.py  run_local.sh
scripts/emr_transformation/: Dockerfile  __init__.py  emr_transformation.py  run_local.sh
scripts/synthea_generator/: Dockerfile
terraform/: Makefile  generate_tfvars.sh  main.tf  terraform.tfvars  variables.tf
tests/unit/: test_emr_ingestion.py  test_emr_transformation.py
(+40 files in other folders)
